# EntJoy

./: .gitignore  .gitmodules  JobSystem.cpp  README.md  build_native.bat
Archetype/: Archetype.cs  ArchetypeEnumrator.cs  StructArray.cs
CallGodotAPI/: CallGodotAPI.sln  icon.svg.import  project.godot
Component/: ComponentType.cs  ComponentTypeManager.cs  ComponentTypes.cs  Vel.cs
Debugger/: DebuggerPanel.cs  (+3 more)
src/EntJoySample/NativeTranspiler_Generated/: CMakeLists.txt  EntJoyCommon.ispc  EntJoySample_IJobChunkMoveCompareTest_MovePosition.h  EntJoySample_IJobChunkMoveCompareTest_MovePosition.ispc  EntJoySample_IJobChunkMoveCompareTest_MoveVelocity.h  EntJoySample_IJobChunkMoveCompareTest_MoveVelocity.ispc  EntJoySample_IJobChunkScheduleOverheadTest_ScheduleValue.h  EntJoySample_IJobChunkScheduleOverheadTest_ScheduleValue.ispc  EntJoySample_SimpleIJobChunkTest_TestValue.h  EntJoySample_SimpleIJobChunkTest_TestValue.ispc  SharpNative_EntJoy_MovementTest_MoveEntitiesTest_RunNativeCppStatic.cpp  SharpNative_EntJoy_MovementTest_MoveEntitiesTest_RunNativeCppStatic.h  SharpNative_EntJoy_MovementTest_MoveEntitiesTest_RunNativeIspcStatic.ispc  SharpNative_EntJoy_MovementTest_MoveEntitiesTest_RunNativeIspcStatic_ispc.h  SharpNative_EntJoy_MovementTest_MoveEntitiesTest_RunNativeIspcStatic_wrapper.cpp  SharpNative_Job_EntJoySample_IJobChunkMoveCompareTest_HeavyJobChunkCppFast_Execute.cpp  SharpNative_Job_EntJoySample_IJobChunkMoveCompareTest_HeavyJobChunkCppFast_Execute.h  SharpNative_Job_EntJoySample_IJobChunkMoveCompareTest_HeavyJobChunkCppFast_Execute_Adapter.cpp  SharpNative_Job_EntJoySample_IJobChunkMoveCompareTest_HeavyJobChunkCpp_Execute.cpp  SharpNative_Job_EntJoySample_IJobChunkMoveCompareTest_HeavyJobChunkCpp_Execute.h  SharpNative_Job_EntJoySample_IJobChunkMoveCompareTest_HeavyJobChunkCpp_Execute_Adapter.cpp  SharpNative_Job_EntJoySample_IJobChunkMoveCompareTest_HeavyJobChunkIspc_Execute.ispc  SharpNative_Job_EntJoySample_IJobChunkMoveCompareTest_HeavyJobChunkIspc_Execute_ispc.h  SharpNative_Job_EntJoySample_IJobChunkMoveCompareTest_HeavyJobChunkIspc_Execute_wrapper.cpp  SharpNative_Job_EntJoySample_IJobChunkMoveCompareTest_HeavyJobEntityCpp_Execute.cpp  SharpNative_Job_EntJoySample_IJobChunkMoveCompareTest_HeavyJobEntityCpp_Execute.h  SharpNative_Job_EntJoySample_IJobChunkMoveCompareTest_HeavyJobEntityCpp_Execute_Adapter.cpp  SharpNative_Job_EntJoySample_IJobChunkMoveCompareTest_HeavyJobEntityIspcMt_Execute_mt.ispc  SharpNative_Job_EntJoySample_IJobChunkMoveCompareTest_HeavyJobEntityIspcMt_Execute_mt_ispc.h  SharpNative_Job_EntJoySample_IJobChunkMoveCompareTest_HeavyJobEntityIspcMt_Execute_mt_wrapper.cpp  SharpNative_Job_EntJoySample_IJobChunkMoveCompareTest_HeavyJobEntityIspc_Execute.ispc  SharpNative_Job_EntJoySample_IJobChunkMoveCompareTest_HeavyJobEntityIspc_Execute_ispc.h  SharpNative_Job_EntJoySample_IJobChunkMoveCompareTest_HeavyJobEntityIspc_Execute_wrapper.cpp  SharpNative_Job_EntJoySample_IJobChunkMoveCompareTest_MoveJobChunkCppFast_Execute.cpp  SharpNative_Job_EntJoySample_IJobChunkMoveCompareTest_MoveJobChunkCppFast_Execute.h  SharpNative_Job_EntJoySample_IJobChunkMoveCompareTest_MoveJobChunkCppFast_Execute_Adapter.cpp  SharpNative_Job_EntJoySample_IJobChunkMoveCompareTest_MoveJobChunkCpp_Execute.cpp  SharpNative_Job_EntJoySample_IJobChunkMoveCompareTest_MoveJobChunkCpp_Execute.h  SharpNative_Job_EntJoySample_IJobChunkMoveCompareTest_MoveJobChunkCpp_Execute_Adapter.cpp  SharpNative_Job_EntJoySample_IJobChunkMoveCompareTest_MoveJobChunkIspc_Execute.ispc  (+133 more)
src/Godot/NativeTranspiler_Generated/: CMakeLists.txt  Godot_Vector2.h  Godot_Vector2.ispc  SharpNative_Job__global_namespace__MoveSystemJobCpp_Execute.cpp  SharpNative_Job__global_namespace__MoveSystemJobCpp_Execute.h  SharpNative_Job__global_namespace__MoveSystemJobCpp_Execute_Adapter.cpp  SharpNative_Job__global_namespace__MoveSystemJobEntityCpp_Execute.cpp  SharpNative_Job__global_namespace__MoveSystemJobEntityCpp_Execute.h  SharpNative_Job__global_namespace__MoveSystemJobEntityCpp_Execute_Adapter.cpp  SharpNative_Job__global_namespace__MoveSystemJobEntityIspc_Execute.ispc  SharpNative_Job__global_namespace__MoveSystemJobEntityIspc_Execute_ispc.h  SharpNative_Job__global_namespace__MoveSystemJobEntityIspc_Execute_mt.ispc  SharpNative_Job__global_namespace__MoveSystemJobEntityIspc_Execute_mt_ispc.h  SharpNative_Job__global_namespace__MoveSystemJobEntityIspc_Execute_mt_wrapper.cpp  SharpNative_Job__global_namespace__MoveSystemJobEntityIspc_Execute_wrapper.cpp  SharpNative_Job__global_namespace__MoveSystemJobIspc_Execute.ispc  SharpNative_Job__global_namespace__MoveSystemJobIspc_Execute_ispc.h  SharpNative_Job__global_namespace__MoveSystemJobIspc_Execute_mt.ispc  SharpNative_Job__global_namespace__MoveSystemJobIspc_Execute_mt_ispc.h  SharpNative_Job__global_namespace__MoveSystemJobIspc_Execute_mt_wrapper.cpp  SharpNative_Job__global_namespace__MoveSystemJobIspc_Execute_wrapper.cpp  SharpNative_Job__global_namespace__MoveSystemJob_Execute.ispc  SharpNative_Job__global_namespace__MoveSystemJob_Execute_Adapter.cpp  SharpNative_Job__global_namespace__MoveSystemJob_Execute_mt.ispc  SharpNative_Job__global_namespace__MoveSystemJob_Execute_mt_wrapper.cpp  SharpNative_Job__global_namespace__MoveSystemJob_Execute_wrapper.cpp  SharpNative_Job__global_namespace__NativeMoveJob_NativeCpp_Execute.cpp  SharpNative_Job__global_namespace__NativeMoveJob_NativeCpp_Execute.h  SharpNative_Job__global_namespace__NativeMoveJob_NativeCpp_Execute_Adapter.cpp  SharpNative_Job__global_namespace__NativeMoveJob_NativeIspc_Execute_Adapter.cpp  SharpNative_Job__global_namespace__NativeMoveJob_NativeIspc_Execute_Batch.ispc  SharpNative_Job__global_namespace__NativeMoveJob_NativeIspc_Execute_Batch_ispc.h  SharpNative_Job__global_namespace__NativeMoveJob_NativeIspc_Execute_Batch_wrapper.cpp  _global_namespace__Position.h  _global_namespace__Position.ispc  _global_namespace__Vel.h  _global_namespace__Vel.ispc  run_ispc.bat
src/NativeDll.Tests/: AssistLifetimeTests.cpp  CMakeLists.txt  JobSystemTests.cpp  NativeWorkerPoolTests.cpp
(+446 files in other folders)
